Don't allow font scale to be lower than 1.0

Many people who're using lower font scale do not expect this behavior, so
Let's revert this (logically) for now, and consider a solution for
low scale font if necessary.

BUG=687770,646254

Review-Url: https://codereview.chromium.org/2680393002
Cr-Commit-Position: refs/heads/master@{#449124}

Former-commit-id: 4ef351aa3467a587e03d8d19cdd9f280ab8fff4d